--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/analytics": "^17.4.2",
+    "@react-native-firebase/app": "^17.4.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.11",
+    "expo-build-properties": "~0.6.0",
+    "expo-dev-client": "~2.2.1",
+    "expo-firebase-core": "^6.0.0",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.20.0",
     "react": "18.2.0",
