chore: using amplitude analytics

--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.yourcompany.yourappname",
       "buildNumber": "1.0.0",
-      "googleServicesFile": "./GoogleService-Info.plist"
+      "googleServicesFile": "./assets/GoogleService-Info.plist"
     },
     "android": {
       "adaptiveIcon": {
@@ -27,20 +27,12 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png",
-      "config": {
-        "firebase": {
-          "apiKey": "AIzaSyCaQ__x9a8Egp0vvL_PMh0wT1PhOtyvsUQ",
-          "authDomain": "sayge-link-auth.firebaseapp.com",
-          "projectId": "sayge-link-auth",
-          "storageBucket": "sayge-link-auth.appspot.com",
-          "messagingSenderId": "471984324994",
-          "appId": "1:471984324994:web:f9440ec9a596a090750f9b",
-          "measurementId": "G-2R077ND0RN"
-        }
-      }
+      "favicon": "./assets/favicon.png"
     },
     "plugins": [
+      "@react-native-firebase/app",
+      "@react-native-firebase/perf",
+      "@react-native-firebase/crashlytics",
       [
         "expo-build-properties",
         {
@@ -49,6 +41,11 @@
           }
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "b74ca062-2927-4e79-963d-e7241ebb09b5"
+      }
+    }
   }
 }
